<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragment.MainFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/main_banner"
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:layout_marginTop="-1dp"
                android:src="@drawable/main_banner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/belwe_bold"
                android:text="Welcome to Hearthstone Codex"
                android:textColor="@color/hs_dark_brown"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_banner" />

            <LinearLayout
                android:id="@+id/layout_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_welcome">

                <Button
                    android:id="@+id/buttonSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:text="Search Cards" />

                <Button
                    android:id="@+id/buttonCollection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Collections" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_standard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_buttons">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/belwe_bold"
                    android:text="Standard Format"
                    android:textColor="@color/hs_dark_brown" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcl_standard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:reverseLayout="true"
                    tools:itemCount="1"
                    tools:listitem="@layout/recycler_collection" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_wild"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_standard">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/belwe_bold"
                    android:text="Wild Format"
                    android:textColor="@color/hs_dark_brown" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcl_wild"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/recycler_collection" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_cards_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_wild">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/belwe_bold"
                    android:text="Cards Back"
                    android:textColor="@color/hs_dark_brown" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcl_card_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/recycler_card_back" />

                <TextView
                    android:id="@+id/txt_list_cards_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/belwe_bold"
                    android:text="See all back cards"
                    android:textColor="@color/hs_dark_brown"
                    android:textStyle="italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/red_carpet_bar"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_cards_back"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="65dp"
                    android:src="@drawable/wood_bar" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/belwe_regular"
                    android:gravity="center"
                    android:text="©2023 Blizzard Entertainment, Inc."
                    android:textColor="@color/hs_yellow"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/belwe_regular"
                    android:gravity="center"
                    android:text="All trademarks referenced herein are the properties of their respective owners."
                    android:textColor="@color/hs_yellow"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/belwe_italic"
                    android:gravity="end"
                    android:text="Made by: Void Hash"
                    android:textColor="@color/hs_yellow"
                    android:textSize="14sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>